package de.fhmaze.engine.status;

public final class FloorCellStatus extends VisitableCellStatus {
    public FloorCellStatus(int enemyDistance) {
        super(enemyDistance);
    }

    public FloorCellStatus() {
        super();
    }
}
