package de.fhmaze.engine.status;

public final class SheetCellStatus extends VisitableCellStatus {
    public SheetCellStatus(int enemyDistance) {
        super(enemyDistance);
    }

    public SheetCellStatus() {
        super();
    }
}
